--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Login | Alex Nova</title>
-  <link rel="stylesheet" href="css/admin2.css" />
+  <title>Admin Login | Tanvir Alam</title>
+  <link rel="stylesheet" href="admin2.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
