--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <p>&copy; 2025 Tanvir Alam Hridoy. Built with 💻 + 🎮 + 🌍</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 <!-- ইউজার লগইন মডাল -->
 <div id="login-modal" class="modal">
   <div class="modal-content">
