--- a/dashboard.html
+++ b/dashboard.html
@@ -135,8 +135,8 @@
     </div>
   </div>
 
-  <script src="auth.js"></script>
-  <script src="admin.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/admin.js"></script>
   <!-- dashboard.html এর <main> এর ভিতরে এই ট্যাব যোগ করো -->
 
 <!-- User Management Tab -->
